# ai-usagebar-macos

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
macos/: AIUsageBar.swift  INSTALL.md  README.md  ai-usagebar-menubar.swift  build.sh  bundle.sh  install-agent.sh  install.sh
macos/Resources/: THIRD_PARTY_NOTICES.md
packaging/aur/: .SRCINFO  .SRCINFO-bin  PKGBUILD  PKGBUILD-bin
src/: cache.rs  config.rs  pango.rs  theme.rs  usage.rs  waybar.rs
src/anthropic/: creds.rs  fetch.rs  keychain.rs  mod.rs  oauth.rs  types.rs
src/openai/: creds.rs
src/tui/: app.rs  panels.rs  settings.rs  view.rs
src/widget/: cli.rs  pretty.rs  render.rs  run.rs
tests/: live.rs
