[package]
name = "ai-usagebar"
version = "0.8.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
description = "AI plan usage engine (Anthropic, OpenAI, Z.AI, OpenRouter, DeepSeek) powering the ai-usagebar-macos menu bar app"
readme = "README.md"
repository = "https://github.com/thenets/ai-usagebar-macos"
homepage = "https://github.com/thenets/ai-usagebar-macos"
documentation = "https://github.com/thenets/ai-usagebar-macos#readme"
keywords = ["macos", "claude", "openai", "menubar", "usage"]
categories = ["command-line-utilities"]

# Keep build artifacts and local state out of any packaged tarball.
exclude = [
    ".github/*",
    ".claude/*",
    "macos/*.app/*",
]

[lib]
name = "ai_usagebar"
path = "src/lib.rs"

[[bin]]
name = "ai-usagebar"
path = "src/bin/ai-usagebar.rs"

[[bin]]
name = "ai-usagebar-tui"
path = "src/bin/ai-usagebar-tui.rs"

[dependencies]
tokio = { version = "1", features = ["rt", "macros", "time", "fs", "process", "signal"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
toml_edit = "0.22"
clap = { version = "4", features = ["derive", "env"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
fs2 = "0.4"
tempfile = "3"
directories = "5"
thiserror = "2"
base64 = "0.22"
ratatui = "0.30.1"
ratatui-bubbletea-components = "0.1"
ratatui-bubbletea-theme = "0.1"

[dev-dependencies]
mockito = "1"
insta = { version = "1", features = ["json"] }
pretty_assertions = "1"
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
